--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>杨灏 | 公路工程师</title>
+    <link rel="icon" href="bitbug_favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="bitbug_favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
@@ -80,7 +82,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2">
-                    <img src="https://picsum.photos/600/400?random=1" alt="杨灏" class="rounded-xl shadow-xl">
+                    <img src="头像.png" alt="杨灏" class="rounded-xl shadow-xl mx-auto">
                 </div>
             </div>
         </div>
@@ -92,7 +94,7 @@
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gradient">关于我</h2>
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/3">
-                    <img src="https://picsum.photos/400/500?random=2" alt="杨灏照片" class="rounded-xl shadow-custom mx-auto">
+                    <img src="头像3.png" alt="杨灏照片" class="rounded-xl shadow-custom mx-auto">
                 </div>
                 <div class="md:w-2/3">
                     <h3 class="text-2xl font-bold mb-4 text-dark">杨灏 | 公路工程师</h3>
@@ -279,7 +281,7 @@
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">联系我</h2>
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
-                    <img src="https://picsum.photos/600/400?random=5" alt="联系我" class="rounded-xl shadow-xl">
+                    <img src="头像5.png" alt="联系我" class="rounded-xl shadow-xl">
                 </div>
                 <div class="md:w-1/2">
                     <div class="bg-white/10 backdrop-blur-md rounded-xl p-8 shadow-xl">
@@ -336,7 +338,12 @@
                     </a>
                 </div>
             </div>
-            <div class="mt-8 pt-6 border-t border-gray-700 text-center text-gray-400">
+            <div class="mt-8 text-center flex justify-center">
+                <div class="inline-block bg-dark/30 backdrop-blur-sm rounded-lg px-6 py-2 border border-gray-700 shadow-lg">
+                    <a href="https://hits.sh/yanghaohaoge.github.io/"><img alt="Hits" src="https://hits.sh/yanghaohaoge.github.io.svg?label=%E6%B5%8F%E8%A7%88%E9%87%8F&extraCount=16851&color=d327de&labelColor=9d92a1"/></a>
+                </div>
+            </div>
+            <div class="mt-4 pt-6 border-t border-gray-700 text-center text-gray-400">
                 <p>&copy; 2023 杨灏. 保留所有权利.</p>
             </div>
         </div>
